--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 		<tbody>
 			<tr>
 			
-			<td onclick="display()"><img class="proc" src="image/process1.png"alt=""><br>Processeur</td>
-			<td onclick="display()"><img class="proc" src="image/ram.png"alt=""><br>Ram</td>
-			<td onclick="display()"><img class="proc" src="image/screen.png"alt=""><br>Ecran</td>
-			<td onclick="display()"><img class="proc" src="image/key.png"alt=""><br>Clavier</td>
-			<td onclick="display()"><img class="proc" src="image/mouse.png"alt=""><br>Souris</td>
+			<td onclick="display('proc')"><img class="proc" src="image/process1.png"alt=""><br>Processeur</td>
+			<td onclick="display('ram')"><img class="proc" src="image/ram.png"alt=""><br>Ram</td>
+			<td onclick="display('screen')"><img class="proc" src="image/screen.png"alt=""><br>Ecran</td>
+			<td onclick="display('key')"><img class="proc" src="image/key.png"alt=""><br>Clavier</td>
+			<td onclick="display('mouse')"><img class="proc" src="image/mouse.png"alt=""><br>Souris</td>
 
 			</tr>
 			
-			<tr onclick="display()"><td><img class="proc" src="image/dd.png"alt=""><br>Disque dur</td>
-			<td onclick="display()"><img class="proc" src="image/os.png"alt=""><br>Processeur</td>
-			<td onclick="display()"><img class="proc" src="image/usbb.png"alt=""><br>Processeur</td>
-			<td onclick="display()"><img class="proc" src="image/gp.png"alt=""><br>Processeur</td>
-			<td onclick="display()"><img class="proc" src="image/plug.png"alt=""><br>Processeur</td>
+			<tr onclick="display('hdd')"><td><img class="proc" src="image/dd.png"alt=""><br>Disque dur</td>
+			<td onclick="display('os')"><img class="proc" src="image/os.png"alt=""><br>Systeme d'exploitation</td>
+			<td onclick="display('usb')"><img class="proc" src="image/usbb.png"alt=""><br>USB</td>
+			<td onclick="display('gpu')"><img class="proc" src="image/gp.png"alt=""><br>Carte graphique</td>
+			<td onclick="display('power')"><img class="proc" src="image/plug.png"alt=""><br>Alimentation</td>
 			</tr>
 		</tbody>
 	</table>
